--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 1.0b2 (UNRELEASED)
 -------------------
 
-- (nothing yet)
+- Change user action name not to clash with Plone's
+  [erral]
 
 1.0b1 (2012/07/13)
 -------------------
