--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 1.0b4 (UNRELEASED)
 --------------------
 
+- Use Twitter API directly to get user information
+  [erral]
 
 - Fix Access Token Request
   [erral]
