--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,12 @@
 Changelog
 =========
 
-1.1 (UNRELEASED)
------------------
+1.0.1 (2014-10-10)
+------------------
+
+- Fix dependencies includes
+  [erral]
+
 
 1.0 (2014-10-10)
 --------------------
